--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sharp": "^0.32.0",
     "aws-sdk": "^2.1481.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
@@ -30,8 +33,14 @@
     "mongoose-delete": "^1.0.1",
     "mongoose-paginate-v2": "^1.7.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.33.5",
     "validator": "^13.11.0",
     "winston": "^3.11.0"
   },
@@ -42,10 +51,17 @@
     "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-delete": "^1.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.0",
+    "@types/nodemailer": "^6.4.15",
+    "@types/passport": "^1.0.16",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/validator": "^13.12.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
