--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "passport-twitter": "^1.0.4",
     "sharp": "^0.33.5",
     "validator": "^13.11.0",
     "winston": "^3.11.0"
@@ -60,8 +60,8 @@
     "@types/nodemailer": "^6.4.15",
     "@types/passport": "^1.0.16",
     "@types/passport-facebook": "^3.0.3",
-    "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-twitter": "^1.0.40",
     "@types/validator": "^13.12.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
